update functionality of component.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
               <span>Current LPs In Collection</span>
               </mat-toolbar-row>
           </mat-toolbar>
-          <app-lpcollection></app-lpcollection>
+          <app-lpcollection [lpItemCollection]="lpItemsList"></app-lpcollection>
       </mat-card>  
 
   </div>
