--- a/src/app/components/lpcollection.component.html
+++ b/src/app/components/lpcollection.component.html
@@ -1,5 +1,5 @@
 <mat-list fxLayout="column" fxLayoutGap="10px" fxLayoutAlign="space-between">
-    <mat-list-item *ngFor="let i of lpCollections; let n = index" class="lplistitem">
+    <mat-list-item *ngFor="let i of lpItemCollection; let n = index" class="lplistitem">
             <!--Album Cover-->
             <div fxFlex="grow" class="lplistitem-photo">
                 <img src="./assets/test-cover.png" class="thumbnail">
